src/styles/elements/_blockquote-grid.css
.blockquote-grid {
    --blockquote-grid-columns-count: 100%;
    --blockquote-grid-gap: var(--content-spacing-between-columns);
    --blockquote-grid-z-index: var(--content-spacing-between-columns);
    --blockquote-grid-margin: var(--spacing-between-elements-normal) auto 0;
    --blockquote-grid-width: var(--content-width-with-padding);
    --blockquote-grid-max-width: var(--content-wide-max-width);

    display: grid;
    grid-template-columns: repeat(var(--blockquote-grid-columns-count), 1fr);
    grid-gap: var(--blockquote-grid-gap);
    width: var(--blockquote-grid-width);
    max-width: var(--blockquote-grid-max-width);
    margin: var(--blockquote-grid-margin);
    z-index: var(--blockquote-grid-z-index);
}

.blockquote-grid[fullwidth] {
    --blockquote-grid-width: 100%;
    --blockquote-grid-max-width: 100%;
}

.blockquote-grid:first-child {
    --blockquote-grid-margin: 0 auto;
}

.blockquote-grid[blockquote-grid-count="2"],
.blockquote-grid[blockquote-grid-count="3"] {
    --blockquote-grid-max-width: var(--content-wide-max-width);
}

@media screen and (min-width: 640px) {
    .blockquote-grid[blockquote-grid-count="2"] {
        --blockquote-grid-columns-count: 2;
    }

    .blockquote-grid[blockquote-grid-count="3"] {
        --blockquote-grid-columns-count: 3;
    }
}

